# dakoda-core

./: .gitignore  README.md  json.py  pyproject.toml
Outputs/metadata_csvs/: cdlk_metadata_pandas.csv  klp1_metadata_polars.csv
dakoda/: corpus.py  dakoda_metadata_scheme.py  languages.py  meta_scheme.py  util.py
data/: dakoda_typesystem.xml  test.xmi
data/CDLK/learner_xmi/: 201006ZW005.xmi  201006ZW012.xmi  201006ZW019.xmi  201006ZW021.xmi  201006ZW022.xmi  201006ZW025.xmi  201006ZW035.xmi  201006ZW038.xmi  201006ZW039.xmi  201006ZW057.xmi  201006ZW058.xmi  201006ZW059.xmi  201006ZW062.xmi  201006ZW063.xmi  201006ZW073.xmi  201006ZW075.xmi  201006ZW080.xmi  201006ZW082.xmi  201006ZW084.xmi  201006ZW091.xmi  201006ZW095.xmi  201006ZW101.xmi  201006ZW104.xmi  201006ZW108.xmi  201006ZW115.xmi  201006ZW118.xmi  201006ZW119.xmi  201006ZW120.xmi  201006ZW128.xmi  201006ZW132.xmi  201006ZW166.xmi  201006ZW167.xmi  201007ZW001.xmi  201007ZW019.xmi  201007ZW021.xmi  201007ZW022.xmi  201007ZW023.xmi  201007ZW030.xmi  201007ZW034.xmi  201007ZW035.xmi  (+160 more)
data/KLP1/learner_xmi/: 3360_1.xmi  3360_2.xmi  3361_1.xmi  3361_2.xmi  3362_1.xmi  3362_2.xmi  3363_1.xmi  3363_2.xmi  3364_1.xmi  3364_2.xmi  3365_1.xmi  3365_2.xmi  3366_1.xmi  3366_2.xmi  3367_1.xmi  3367_2.xmi  3368_1.xmi  3368_2.xmi  3526_1.xmi  (+504 more)
data/Merlin_test/: 1023_0101848.xmi  1023_0101855.xmi  1023_0103826.xmi  1023_0107682.xmi  1023_0107780.xmi  1023_0108813.xmi  1023_0108889.xmi  1023_0109496.xmi  1091_0000223.xmi  1091_0000231.xmi  cas_idx.csv
notebooks/: 01_Basic_Corpus_Loading_and_Exploration.ipynb  02_Interactive_Corpus_Browser_and_Metadata_Visualization.ipynb  03_Corpus_Comparison_and_Statistical_Analysis.ipynb  04_Annotation_Exploration_and_Visualization.ipynb.ipynb  05_Interactive_Metadata_Filtering_and_Visualization.ipynb  Corpus_Browser.ipynb  Corpus_Processing_Pandas_Polars.ipynb  corpus_comparison.ipynb
notebooks/Results/: Task-1.ipynb  Task-2.ipynb  Task-3.ipynb  xmi_basic_info_cdlk_polars.csv  xmi_basic_info_polars.csv
src/dakoda/: __init__.py  corpus.py  dakoda_metadata_scheme.py  metadata.py  query.py  types.py  uima.py  util.py
tests/: conftest.py  dakoda_fixtures.py  test_core.py  test_corpus.py  test_meta.py  test_metadata.py  test_query.py
(+11 files in other folders)
