[tool.poetry]
name = "dakoda-core"
version = "0.1.0"
description = ""
authors = [
    "Marius Hamacher <marius.hamacher@outlook.de>",
    "Torsten Zesch <torsten.zesch@fernuni-hagen.de>"
]
readme = "README.md"
packages = [
    { include = "dakoda", from="src"},
    { include = "dakoda_typesystem.xml", from = "src/dakoda/res" }
]

[tool.poetry.dependencies]
python = ">=3.11"
polars = ">=1.30.0,<2.0.0"
dkpro-cassis = ">=0.10.1,<1.0.0"
pytest = ">=8.4.0,<9.0.0"
xsdata = "22.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]